--- a/streampay/package.json
+++ b/streampay/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "somnia-stream-frontend",
+  "name": "streampay-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,6 +23,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vercel/postgres": "^0.8.0",
     "autoprefixer": "^10.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
