--- a/streampay/package.json
+++ b/streampay/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "keeper": "npx ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" keeper/intelligent-keeper.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
